@@ -49,6 +49,7 @@ import org.jvnet.hk2.annotations.Service;
 import org.glassfish.hk2.api.PerLookup;
 
 import java.io.*;
+import org.glassfish.hk2.utilities.CleanerFactory;
 import java.util.*;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
@@ -488,6 +489,7 @@ public class InputJarArchive extends JarArchive implements ReadableArchive {
 
         private EntryEnumeration(final JarEntrySource jarEntrySource) {
             this.jarEntrySource = jarEntrySource;
+            registerCloseEvent();
         }
 
         /**
@@ -540,10 +542,10 @@ public class InputJarArchive extends JarArchive implements ReadableArchive {
             entryEnumerations.remove(this);
         }
 
-        @Override
-        protected void finalize() throws Throwable {
-            super.finalize();
-            close();
+        public final void registerCloseEvent() {
+            CleanerFactory.create().register(this, () -> {
+                close();
+            });
         }
     }
 
